some else changes to my block

--- a/index.html
+++ b/index.html
@@ -843,166 +843,167 @@
                             <img src="/img/investors_photos/investor_diana_johnson.png"
                                 alt="Diana Johnson Photo" width="120">
                             <div class="block__texname-investor-Diana-Johnson">
-                                <h3>Diana Johnson</h3>
-                                <div class="investor__Diana-Johnson-speech">
-                                    <p>«I believe that fast and zero-fee exchanges are crucial for the crypto market to
+                                <h3 class="text__name-investor-Diana-Johnson">Diana Johnson</h3>
+                                <div class="subtext__speech-investor-Diana-Johnson">
+                                    <p class="subtext__text-speech-investor-Diana-Johnson">«I believe that fast and zero-fee exchanges are crucial for the crypto market to
                                         be treated seriously by financial giants. That's why I believe in Cryptochange.»
                                     </p>
                                 </div>
-                                <div class="date__Diana-Johnson-speech">
-                                    <p>April 21, 2022</p>
+                                <div class="block__date-post-speech-investor-Diana-Johnson">
+                                    <p class="text__date-post-speech-investor-Diana-Johnson">April 21, 2022</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="investor__Dean_Stuart">
-                    <div class="investor__Dean-Stuart-photo">
-                        <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60caf57c2af2a000223c37ce_optimized_800_c754x754-23x23?nowebp"
+                <div class="block__investor-Dean-Stuart">
+                    <div class="block__investor-Dean-Stuart-photo">
+                        <img src="img/investors_photos/investor_dean_stuart.png"
                             alt="Dean Stuart Photo" width="120">
-                        <div class="investor__Dean-Stuart-textname">
-                            <h3>Dean Stuart</h3>
-                            <div class="investor__Dean-Stuart-speech">
-                                <p>«I communicate with dozens of crypto projects every month. However, Cryptochange
+                        <div class="block__textname-investor__Dean-Stuart">
+                            <h3 class="text__name-investor-Dean-Stuart">Dean Stuart</h3>
+                            <div class="subtext__speech-investor-Dean-Stuart">
+                                <p class="subtext__text-speech-investor-Dean-Stuart">«I communicate with dozens of crypto projects every month. However, Cryptochange
                                     seemed to me to be very smart guys with an important idea.»</p>
                             </div>
-                            <div class="date__Dean-Stuart-speech">
-                                <p>June 12, 2022</p>
+                            <div class="block__date-post-speech-investor-Diana-Johnson">
+                                <p class="text__date-post-speech-investor-Diana-Johnson">June 12, 2022</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section__news-area">
-            <div class="list__crypto-news">
-                <h3>Crypto News</h3>
-                <div class="divider__yellow-dash">
-                    <h2>—</h2>
+        <section class="section__news-block-column">
+            <div class="block__list-column-crypto-news">
+                <h3 class="text__title-list-column-crypto-news">Crypto News</h3>
+                <div class="dash__under-title-list-column-crypto-news">
+                    <h2 class="dash__under-title-text-list-column-crypto-news">—</h2>
                 </div>
                 <ul>
                     <li class="news__bitcoin">
                         <div class="news__bitcoin-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d592de84c0d00021a7ba82_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/crypto_news_pictures/commercial_on_the_building_photo.png"
                                 alt="Commercial On The Building Photo" width="120">
                         </div>
-                        <div class="text_under-photo-bitcoin-picture">
-                            <p>Bitcoin Had a Really Volatile First Half of the Year</p>
+                        <div class="textline__under-photo-bitcoin-picture">
+                            <p class="textline__text-under-photo-bitcoin-picture">Bitcoin Had a Really Volatile First Half of the Year</p>
                         </div>
                         <div class="date__post-news-bitcoin-picture">
-                            <p>Fri, July 2, 2022, 3:15 PM</p>
+                            <p class="date__text-post-news-bitcoin-picture">Fri, July 2, 2022, 3:15 PM</p>
                         </div>
                     </li>
                     <li class="news__huobi-withdrawal">
                         <div class="news__huobi-withdrawal-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d5937df49e5b00211a45e5_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/crypto_news_pictures/coins_of_bitcoin_photo.png"
                                 alt="Coins Of Bitcoin Photo" width="120">
                         </div>
-                        <div class="text_under-photo-huobi-withdrawal">
-                            <p>Huobi Provides 24-Hour Crypto Withdrawal Delay</p>
+                        <div class="textline__under-photo-huobi-withdrawal">
+                            <p class="textline__text-under-photo-huobi-withdrawal">Huobi Provides 24-Hour Crypto Withdrawal Delay</p>
                         </div>
                         <div class="date__post-news-huobi-withdrawal">
-                            <p>Thu, July 1, 2022, 2:10 PM</p>
+                            <p class="date__text-post-news-huobi-withdrawal">Thu, July 1, 2022, 2:10 PM</p>
                         </div>
                     </li>
                     <li class="news__baby-dogecoin">
                         <div class="news__baby-dogecoin-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d59347e5c969002264dcef_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/crypto_news_pictures/iphone_on_papers.png"
                                 alt="Iphone On Papers" width="120">
                         </div>
-                        <div class="text_under-photo-baby-dogecoin">
-                            <p>A Dogecoin Spinoff Named Baby Doge Doubled in Price</p>
+                        <div class="textline__under-picture-baby-dogecoin">
+                            <p class="textline__text-under-picture-baby-dogecoin">A Dogecoin Spinoff Named Baby Doge Doubled in Price</p>
                         </div>
                         <div class="date__post-news-baby-dogecoin">
-                            <p>Wed, June 30, 2022, 6:15 PM</p>
+                            <p class="date__text-post-news-baby-dogecoin">Wed, June 30, 2022, 6:15 PM</p>
                         </div>
                     </li>
                 </ul>
+                </div>
             </div>
-            <div class="list__financial-news">
-                <h3>Financial News</h3>
-                <div class="divider__yellow-dash">
-                    <h2>—</h2>
+            <div class="block__list-column-financial-news">
+                <h3 class="text__title-list-column-financial-news">Financial News</h3>
+                <div class="dash__under-title-list-column-financial-news">
+                    <h2 class="dash__under-title-text-list-column-financial-news">—</h2>
                 </div>
                 <ul>
                     <li class="news__crypro-raises">
                         <div class="news__crypto-raises-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d593ca0a47160021de544b_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/financial_news_pictures/motherboard_photo.png"
                                 alt="Motherboard Photo" width="120">
                         </div>
-                        <div class="text_crypto-raises-picture">
-                            <p>Coin Financial, Crypto Startup, Raises $26M in Series A Funding</p>
+                        <div class="textline__under-picture-crypto-raises">
+                            <p class="textline__text-under-picture-crypto-raises">Coin Financial, Crypto Startup, Raises $26M in Series A Funding</p>
                         </div>
                         <div class="date__post-news-crypto-raises">
-                            <p>Fri, July 2, 2022, 2:10 PM</p>
+                            <p class="date__text-post-news-crypto-raises">Fri, July 2, 2022, 2:10 PM</p>
                         </div>
                     </li>
                     <li class="news__uk-after-brexit">
                         <div class="news__uk-after-brexit-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d59424f9141300222cfbde_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/financial_news_pictures/crypto_exchange_chart_photo.png"
                                 alt="Сrypto Exchange Chart Photo" width="120">
                         </div>
-                        <div class="text_under-photo-uk-after-brexit">
-                            <p>UK Sets out Its Vision for Post-Brexit Financial Market</p>
+                        <div class="textline__under-picture-uk-after-brexit">
+                            <p class="textline__text-under-picture-uk-after-brexit>UK Sets out Its Vision for Post-Brexit Financial Market</p>
                         </div>
                         <div class="date__post-news-uk-after-brexit">
-                            <p>Thu, July 1, 2022, 4:15 PM</p>
+                            <p class="date__text-post-news-uk-after-brexit">Thu, July 1, 2022, 4:15 PM</p>
                         </div>
                     </li>
                     <li class="news__top-5-trends">
                         <div class="news__top-5-trends-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d59457266e250021a546af_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/financial_news_pictures/coins_photo.png"
                                 alt="Coins Photo" width="120">
                         </div>
-                        <div class="text_under-photo-top-5-trends">
-                            <p>Top 5 Trends That Will Define the Landscape of Financial World</p>
+                        <div class="textline__under-picture-top-5-trends">
+                            <p class="textline__text-under-picture-top-5-trends">Top 5 Trends That Will Define the Landscape of Financial World</p>
                         </div>
                         <div class="date__post-news-top-5-trends">
-                            <p>Tue, June 29, 2022, 10:15 AM</p>
+                            <p class="date__text-post-news-top-5-trends">Tue, June 29, 2022, 10:15 AM</p>
                         </div>
                     </li>
                 </ul>
             </div>
-            <div class="list__regulation-news">
-                <h3>Regulation News</h3>
-                <div class="divider__yellow-dash">
-                    <h2>—</h2>
+            <div class="block__list-column-regulation-news">
+                <h3 class="text__title-list-column-regulation-news>Regulation News</h3>
+                <div class="dash__under-title-list-column-regulation-news">
+                    <h2 class="dash__under-title-text-list-column-regulation-news">—</h2>
                 </div>
                 <ul>
                     <li class="news__crypro-regulation-india">
-                        <div class="news__crypro-regulation-india">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d594b6da10810021cf06f4_optimized_800_c800x800-0x0?nowebp"
+                        <div class="news__crypro-regulation-india-picture">
+                            <img src="img/regulation_news_pictures/phone_in_hand_photo.png"
                                 alt="Phone In Hand Photo" width="120">
                         </div>
-                        <div class="text_crypro-regulation-india-picture">
-                            <p>India Has Defined Its Position on Crypto Regulation</p>
+                        <div class="textline__under-picture-crypro-regulation-india">
+                            <p class="textline__text-under-picture-crypro-regulation-india">India Has Defined Its Position on Crypto Regulation</p>
                         </div>
                         <div class="date__post-news-crypro-regulation-india">
-                            <p>Fri, July 2, 2022, 11:10 AM</p>
+                            <p class="date__text-post-news-crypro-regulation-india">Fri, July 2, 2022, 11:10 AM</p>
                         </div>
                     </li>
                     <li class="news__crypto-regulation-south-africa">
                         <div class="news__crypto-regulation-south-africa-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d594ede5c969002264de8b_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/regulation_news_pictures/one_bitcoin_photo.png"
                                 alt="One Bitcoin Photo" width="120">
                         </div>
-                        <div class="text_under-photo-crypto-regulation-south-africa">
-                            <p>South Africa Tightens Crypto Regulation Because of Scams</p>
+                        <div class="textline__under-picture-crypto-regulation-south-africa">
+                            <p class="textline__text-under-picture-crypto-regulation-south-africa">South Africa Tightens Crypto Regulation Because of Scams</p>
                         </div>
                         <div class="date__post-news-crypto-regulation-south-africa">
-                            <p>Thu, July 1, 2022, 2:15 PM</p>
+                            <p class="date__text-post-news-crypto-regulation-south-africa">Thu, July 1, 2022, 2:15 PM</p>
                         </div>
                     </li>
                     <li class="news__cryptocurrencies-in-korea">
                         <div class="news__cryptocurrencies-in-korea-picture">
-                            <img src="https://res2.weblium.site/res/60c8bda3f1911800212f169f/60d59543427da70021fe650c_optimized_800_c800x800-0x0?nowebp"
+                            <img src="img/regulation_news_pictures/man_with_two_laptops.png"
                                 alt="Man With Two Laptops Photo" width="120">
                         </div>
-                        <div class="text_under-photo-cryptocurrencies-in-korea">
-                            <p>South Korea Says It's Open for Cryptocurrencies</p>
+                        <div class="textline__under-photo-cryptocurrencies-in-korea">
+                            <p class="textline__text-under-photo-cryptocurrencies-in-korea">South Korea Says It's Open for Cryptocurrencies</p>
                         </div>
                         <div class="date__post-news-cryptocurrencies-in-korea">
-                            <p>Mon, June 28, 2022, 10:15 AM</p>
+                            <p class="date__text-post-news-cryptocurrencies-in-korea">Mon, June 28, 2022, 10:15 AM</p>
                         </div>
                     </li>
                 </ul>
