--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                         </div>
                     </li>
                 </ul>
-                </div>
+    
             </div>
             <div class="block__list-column-financial-news">
                 <h3 class="text__title-list-column-financial-news">Financial News</h3>
@@ -943,8 +943,9 @@
                             <img src="img/financial_news_pictures/crypto_exchange_chart_photo.png"
                                 alt="Сrypto Exchange Chart Photo" width="120">
                         </div>
+
                         <div class="textline__under-picture-uk-after-brexit">
-                            <p class="textline__text-under-picture-uk-after-brexit>UK Sets out Its Vision for Post-Brexit Financial Market</p>
+                            <p class="textline__text-under-picture-uk-after-brexit">UK Sets out Its Vision for Post-Brexit Financial Market</p>
                         </div>
                         <div class="date__post-news-uk-after-brexit">
                             <p class="date__text-post-news-uk-after-brexit">Thu, July 1, 2022, 4:15 PM</p>
@@ -965,8 +966,8 @@
                 </ul>
             </div>
             <div class="block__list-column-regulation-news">
-                <h3 class="text__title-list-column-regulation-news>Regulation News</h3>
-                <div class="dash__under-title-list-column-regulation-news">
+                <h3 class="text__title-list-column-regulation-news">Regulation News</h3>
+                <div class="dashs__dash__under-title-list-column-regulation-news">
                     <h2 class="dash__under-title-text-list-column-regulation-news">—</h2>
                 </div>
                 <ul>
@@ -1005,6 +1006,7 @@
                         <div class="date__post-news-cryptocurrencies-in-korea">
                             <p class="date__text-post-news-cryptocurrencies-in-korea">Mon, June 28, 2022, 10:15 AM</p>
                         </div>
+                        
                     </li>
                 </ul>
             </div>
