fix img class block 2

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="links__container-arrow">
                         <div class="yellow__arrow-one">
                             <div class="image__one">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                             </div>
                             <div class="based__on">
                                 <p>Based on</p>
@@ -94,49 +94,49 @@
                         </div>
                         <div class="yellow__arrow-two">
                             <div class="global__payments">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a>
                             </div>
                         </div>
                         <div class="yellow__arrow-three">
                             <div class="crypto__to-fait">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Crypto to Fiat</p>
                             </div>
                         </div>
                         <div class="yellow__arrow-four">
                             <div class="instant__transactions">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Instant Transactions</p>
                             </div>
                         </div>
                         <div class="yellow__arrow-five">
                             <div class="free__of-custody">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Free of Custody</p>
                             </div>
                         </div>
                         <div class="yellow__arrow-six">
                             <div class="the__best-rates">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>The Best Rates</p>
                             </div>
                         </div>
                         <div class="yellow__arrow-seven">
                             <div class="all__types__of-altcoins">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>All Types of Altcoins</p>
                             </div>
                         </div>
                         <div class="yellow__arrow-eight">
                             <div class="ptwop__payments">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>P2P Payments</p>
                             </div>
                         </div>
                         <div class="yellow__arrow-nine">
                             <div class="reliable__service">
-                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Reliable Service</p>
                             </div>
                         </div>
