changed header formatting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header container" >
-        <!-- <div class="header__contacts">
+        <!-- <div class="header__contacts container" >
             <div class="header__contacts-support support">
                 <p class="support__text">Support us on: </p>
                 <a class="support__link" href="#"> ICO listings</a>
@@ -23,11 +23,11 @@
             </div>
         </div>
         <div class="header__line"></div> -->
-        <nav class="header__nav">
+        <nav class="header__nav container" >
             <a class="header__logo-container " href="#">
                 <img class="header__logo" src="img/cryptochange-logo.svg" alt="cryptochange-logo">
             </a>
-            <!-- <div class="header__menu">
+            <!-- <div class="header__menu" container>
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
                         <a class="list__about-link header__list" href="#why__cryptochange">About</a>
@@ -47,7 +47,7 @@
                 </ul>
             </div> -->
         </nav>
-        <div class="header__banner">
+        <div class="header__banner" container>
             <h1 class="header__banner-title">Blockchain Exchange</h1>
             <p class="header__banner-text">Cryptochange is a revolutionary exchange that provides extremely fast and
                 reliable currency exchange with zero fees.</p>
