changed header formatting fix-1(Attribute container not allowed on element div at this point.)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
             </div> -->
         </nav>
-        <div class="header__banner" container>
+        <div class="header__banner container" >
             <h1 class="header__banner-title">Blockchain Exchange</h1>
             <p class="header__banner-text">Cryptochange is a revolutionary exchange that provides extremely fast and
                 reliable currency exchange with zero fees.</p>
