chnged class in roadmap

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <!--end of 4 section-->
         <!--5 section-->
         <!--Recommendation-add class name into tags (p)-->
-        <section id="roadmap" class="stages">
+        <section id="roadmap" class="roadmap">
             <div class="roadmap__title-container section-title">
                 <span class="yellow__line">-</span>
                 <h2 class="section-title__title">What Stage Are We at?</h2>
