--- a/index.html
+++ b/index.html
@@ -839,31 +839,31 @@
                 </div> 
             </div>
                 <div class="container__carrousel-with-investors-feedback">
-                    <div class="block__investor-kilian-smith">
+                    <div class="block__investor-kilian-smith smith-block">
                         <div class="block__investor-kilian-smith-photo">
-                            <img class="photo__investor-kilian-smith investor-smith"
+                            <img class="photo__investor-kilian-smith smith-photo"
                                 src="img/investors_photos/investor_killian_smith.png" alt="Kilian Smith Photo">
                             <div class="block__textname-investor-kilian-smith">
                                 <h3 class="text__name-investor-kilian-smith">Killian Smith</h3>
-                                <div class="subtext__speech-investor-kilian-smith">
+                                <div class="block__subtext-speech-investor-kilian-smith">
                                     <p class="subtext__text-speech-investor-kilian-smith">«When I first met the
                                         Cryptochange team at Crypto Expo 2022, I realized they had
                                         a really great idea and almost everything they needed for its implementation.»
                                     </p>
                                 </div>
-                                <div class="date__post-speech-investor-kilian-smith-">
+                                <div class="date__post-speech-investor-kilian-smith">
                                     <p>December 15, 2022</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="block__investor-diana-johnson">
+                    <div class="block__investor-diana-johnson johnson-block">
                         <div class="block__investor-diana-johnson-photo">
-                            <img class="photo__investor-diana-johnson investor-johnson"
+                            <img class="photo__investor-diana-johnson johnson-photo"
                                 src="img/investors_photos/investor_diana_johnson.png" alt="Diana Johnson Photo">
                             <div class="block__texname-investor-diana-johnson">
                                 <h3 class="text__name-investor-diana-johnson">Diana Johnson</h3>
-                                <div class="subtext__speech-investor-diana-johnson">
+                                <div class="block__subtext-speech-investor-diana-johnson">
                                     <p class="subtext__text-speech-investor-diana-johnson">«I believe that fast and
                                         zero-fee exchanges are crucial for the crypto market to
                                         be treated seriously by financial giants. That's why I believe in Cryptochange.»
@@ -875,13 +875,13 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="block__investor-dean-stuart">
+                    <div class="block__investor-dean-stuart stuart-block">
                     <div class="block__investor-dean-stuart-photo">
-                        <img class="photo__investor-dean-stuart investor-stuart"
+                        <img class="photo__investor-dean-stuart stuart-photo"
                             src="img/investors_photos/investor_dean_stuart.png" alt="Dean Stuart Photo">
                         <div class="block__textname-investor-dean-stuart">
                             <h3 class="text__name-investor-dean-stuart">Dean Stuart</h3>
-                            <div class="subtext__speech-investor-dean-stuart">
+                            <div class="block__subtext-speech-investor-dean-stuart">
                                 <p class="subtext__text-speech-investor-dean-stuart">«I communicate with dozens of
                                     crypto projects every month. However, Cryptochange
                                     seemed to me to be very smart guys with an important idea.»</p>
